[gd_scene format=3 uid="uid://dn8xyj6dabjmc"]

[ext_resource type="Script" uid="uid://bx1m78vlx5fe3" path="res://UI/Scripts/input.gd" id="1_jqfrl"]
[ext_resource type="FontFile" uid="uid://vew8is4rhj0r" path="res://UI/Assets/Dank-Depths.ttf" id="1_jsb5y"]
[ext_resource type="PackedScene" uid="uid://cdijxf5cf0v3u" path="res://UI/Scenes/input_button.tscn" id="2_72que"]

[sub_resource type="Theme" id="Theme_d3gu3"]
default_font = ExtResource("1_jsb5y")
default_font_size = 24

[node name="InputMenu" type="Control" unique_id=2105584381]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_d3gu3")
script = ExtResource("1_jqfrl")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1540886280]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer" unique_id=1739822226]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "INPUT SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="VBoxContainer" unique_id=334470550]
custom_minimum_size = Vector2(1000, 750)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Panel" unique_id=1951215721]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Panel/MarginContainer" unique_id=144981319]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Panel/MarginContainer/ScrollContainer" unique_id=1308660199]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActionList" type="VBoxContainer" parent="VBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer" unique_id=1693972493]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InputButton" parent="VBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/ActionList" unique_id=640413498 instance=ExtResource("2_72que")]
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer" unique_id=1765661390]
layout_mode = 2
size_flags_vertical = 3

[node name="Return" type="HBoxContainer" parent="VBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer" unique_id=2085872586]
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/Return" unique_id=135441168]
layout_mode = 2
size_flags_horizontal = 3

[node name="Return" type="Button" parent="VBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/Return" unique_id=228357563]
custom_minimum_size = Vector2(175, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "RETURN"

[node name="Control2" type="Control" parent="VBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/Return" unique_id=1894842943]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="VBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/Return/Return" to="." method="_on_return_pressed"]
